[tool.poetry]
name = "hexlet_code_apvl"
version = "0.2.0"
description = "Studying python3"
authors = ["artem.pvl"]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
